#Nmap Changelog ($Id$); -*-text-*-

Nmap 7.92 [2021-08-07]

o [Windows] Upgraded Npcap (our Windows raw packet capturing and
  transmission driver) from version 1.00 to the latest version 1.50. You can
  read about the dozens of performance improvements, bug fixes and feature
  enhancements at https://npcap.org/changelog.

o [Windows] Thanks to the Npcap 1.50 upgrade, Nmap now works on the Windows
  ARM architecture so you can run it on lightweight and power-efficient
  tablets like the Microsoft Surface Pro X and Samsung Galaxy Book Go. More
  ARM devices are on the way along with the upcoming Windows 11 release. See
  the Npcap on ARM announcement at
  https://seclists.org/nmap-announce/2021/2.

o [Windows] Updated our Windows builds to Visual Studio 2019, Windows 10
  SDK, and the UCRT. This prevents Nmap from working on Windows Vista and
  earlier, but they can still use older versions of Nmap on their ancient
  operating system.

o New Nmap option --unique will prevent Nmap from scanning the same IP
  address twice, which can happen when different names resolve to the same
  address. [Daniel Miller]

o [NSE][GH#1691] TLS 1.3 now supported by most scripts for which it is
  relevant, such as ssl-enum-ciphers. Some functions like ssl tunnel
  connections and certificate parsing will require OpenSSL 1.1.1 or later to
  fully support TLS 1.3. [Daniel Miller]

o [NSE] Added 3 NSE scripts, from 4 authors, bringing the total up to 604!
  They are all listed at https://nmap.org/nsedoc/, and the summaries are
  below:
  + [GH#2201] nbns-interfaces queries NetBIOS name service (NBNS) to gather
    IP addresses of the target's network interfaces [Andrey Zhukov]

  + [GH#711] openflow-info gathers preferred and supported protocol versions
    from OpenFlow devices [Jay Smith, Mak Kolybabi]

  + port-states prints a list of ports that were found in each state,
    including states that were summarized as "Not shown: X closed ports"
    [Daniel Miller]
